# assetgs

./: MANIFEST.in  README.rst  development.ini  production.ini  pytest.ini  setup.cfg  setup.py  testing.ini
assetgs/alembic/: env.py
assetgs/templates/: layout.jinja2
assetgs/views/: default.py  notfound.py
tests/: conftest.py  test_functional.py  test_views.py
