[metadata]
name = assetgs
version = 0.0
keywords = Asset Management System
description = AssetGS
long_description = file: README.rst, CHANGES.rst
author = Lee Ji-Ho
author_email = search5@gmail.com
license_files = LICENSE
url = https://github.com/search5/assetgs
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    plaster_pastedeploy
    pyramid
    pyramid_jinja2
    pyramid_debugtoolbar
    waitress
    alembic
    pyramid_retry
    pyramid_tm
    SQLAlchemy
    transaction
    zope.sqlalchemy

[options.packages.find]
exclude =
    tests

[options.entry_points]
paste.app_factory =
    main = assetgs:main
console_scripts =
    initialize_assetgs_db = assetgs.scripts.initialize_db:main

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cov
